--- a/SpriteFontPlus/SpriteFontPlus.csproj
+++ b/SpriteFontPlus/SpriteFontPlus.csproj
@@ -86,7 +86,7 @@
     <Compile Include="SpriteBatchExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\MonoGame_Windows\MonoGame.Framework\MonoGame.Framework.Windows.csproj">
+    <ProjectReference Include="..\..\MonoGame_Windows\MonoGame.Framework\MonoGame.Framework.WindowsDX.csproj">
       <Project>{7de47032-a904-4c29-bd22-2d235e8d91ba}</Project>
       <Name>MonoGame.Framework.Windows</Name>
     </ProjectReference>
