--- a/SpriteFontPlus/SpriteFontPlus.csproj
+++ b/SpriteFontPlus/SpriteFontPlus.csproj
@@ -41,7 +41,7 @@
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Switch\</OutputPath>
-    <DefineConstants>CONSOLE;SWITCH</DefineConstants>
+    <DefineConstants>CONSOLE;SWITCH;NOTPREMULT</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
