--- a/SpriteFontPlus/SpriteFontPlus.csproj
+++ b/SpriteFontPlus/SpriteFontPlus.csproj
@@ -62,8 +62,18 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Switch\</OutputPath>
+    <OutputPath>bin\XboxOne\</OutputPath>
     <DefineConstants>CONSOLE;XBOXONE</DefineConstants>
+    <ErrorReport>prompt</ErrorReport>
+    <WarningLevel>4</WarningLevel>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'PS4|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <DebugType>pdbonly</DebugType>
+    <Optimize>true</Optimize>
+    <OutputPath>bin\PS4\</OutputPath>
+    <DefineConstants>CONSOLE;PS4</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
@@ -117,6 +127,12 @@
     <ProjectReference Include="..\..\..\MonoGame\MonoGame.Framework\MonoGame.Framework.XboxOne.csproj">
       <Project>{c29cdabf-cabe-c8e1-9646-72616d65776f}</Project>
       <Name>MonoGame.Framework.Switch</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup Condition="'$(Configuration)|$(Platform)' == 'PS4|AnyCPU'">
+    <ProjectReference Include="..\..\..\MonoGame\MonoGame.Framework\MonoGame.Framework.PlayStation4.csproj">
+      <Project>{1a2f0c59-f119-469e-8213-cef1d65969ee}</Project>
+      <Name>MonoGame.Framework.PlayStation4</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
